--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@vercel/analytics": "^1.1.1",
     "clsx": "^2.1.1",
     "framer-motion": "^10.16.4",
-    "next": "14.0.0",
+    "next": "^15.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.2",
@@ -32,7 +32,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.17",
     "eslint": "8.56.0",
-    "eslint-config-next": "14.0.0",
+    "eslint-config-next": "^15.1.6",
     "postcss": "^8.4.33",
     "supabase": "^2.6.8",
     "tailwindcss": "^3.4.1"
